--- a/README.org
+++ b/README.org
@@ -62,6 +62,9 @@ its content.
 
 ** Junio 2024
 
+*** 09-Jun-24
++ [[https://www.scientificamerican.com/article/ai-will-become-mathematicians-co-pilot/][AI will become mathematicians’ ‘co-pilot’ (Fields Medalist Terence Tao explains how proof checkers and AI programs are dramatically changing mathematics)]]. ~ Christoph Drösser. #AI #ITP #Lean4 #Math
+
 *** 08-Jun-24
 + [[https://arxiv.org/abs/2406.01940][Process-driven autoformalization in Lean 4]]. ~ Jianqiao Lu et als. #Autoformalization #LLMs #ITP #Lean4
 + [[https://well-typed.com/blog/2024/06/announcing-free-haskell-intro-course/][Announcing a free video-based Haskell introduction course]]. ~ Andres Löh (@kosmikus@functional.cafe). #FunctionalProgramming #Haskell
