--- a/README.org
+++ b/README.org
@@ -62,6 +62,9 @@ its content.
 
 ** Junio 2024
 
+*** 23-Jun-24
++ [[https://byorgey.github.io/blog/posts/2024/06/21/cpih-product-divisors.html][Competitive programming in Haskell: sieving with mutable arrays]]. ~ Brent Yorgey (@byorgey@mathstodon.xyz). #FunctionalProgramming #Haskell
+
 *** 22-Jun-24
 + [[https://florisvandoorn.com/carleson/blueprint/][Carleson operators on doubling metric measure spaces, ~ Lars Becker, Floris van Doorn, Asgar Jamneshan, Rajula Srivastava, Christoph Thiele]]. #ITP #Lean4 #Math
 + [[https://openreview.net/forum?id=sjLWmLeJ6R][Lean4trace: Data augmentation for neural theorem proving in Lean]]. ~ Vasilii Nesterov, Yermek Kapushev, Mikhail Burtsev. #ITP #Lean4 #LLMs
